k8s/version3-helmcharts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: version3
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb

---

apiVersion: v1
kind: Service
metadata:
  name: version3-service
  namespace: version3
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-version3
